open everything nvm related

--- a/php-workspace/7.2/Dockerfile
+++ b/php-workspace/7.2/Dockerfile
@@ -12,8 +12,7 @@ export NVM_DIR="/opt/nvm"; \
 mkdir /opt/nvm; \
 chmod 777 /opt/nvm; \
 curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash; \
-chmod +x /opt/nvm/nvm.sh; \
-/opt/nvm/nvm.sh;
+chmod 777 /opt/nvm;
 
 COPY ./php-workspace/initws.sh /tmp/initws.sh
 RUN ["chmod", "+x", "/tmp/initws.sh"]
